--- a/Client/Views/Certificate/Index.cshtml
+++ b/Client/Views/Certificate/Index.cshtml
@@ -12,6 +12,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/cerfiticate.css" />
+    
     <title>Hello, world!</title>
 </head>
 <body>
@@ -33,7 +34,7 @@
                         <div class="row">
                             <div class="col-xs-2"><!-- LEAVE EMPTY --></div>
                             <div class="pm-certificate-name underline margin-0 col-xs-8 text-center">
-                                <span class="pm-name-text bold">TrueNorth Administrator</span>
+                                <span class="pm-name-text bold" id="judulSertif">TrueNorth Administrator</span>
                             </div>
                             <div class="col-xs-2"><!-- LEAVE EMPTY --></div>
                         </div>
@@ -103,5 +104,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/certificate.js" asp-append-version="true"></script>
 </body>
 </html>
