--- a/Client/Views/Home/404.cshtml
+++ b/Client/Views/Home/404.cshtml
@@ -11,13 +11,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-	<title>404 HTML Template by Colorlib</title>
+	<title>404 HTML Tempalte by Colorlib</title>
 
 	<!-- Google font -->
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
 
 	<!-- Custom stlylesheet -->
-	<link type="text/css" rel="stylesheet" href="~/css/styleError.css" />
+	<link type="text/css" rel="stylesheet" href="~/css/styleError1.css" />
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -25,20 +25,21 @@
 		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
-
 </head>
 
 <body>
-
+	
 	<div id="notfound">
 		<div class="notfound">
 			<div class="notfound-404">
 				<h1>Oops!</h1>
-				<h2>404 - Not Found</h2>
 			</div>
-			<a href="../">Go TO Homepage</a>
+			<h2>404 - Page not found</h2>
+			<p>Halaman Tidak Ditemukan, mohon kembali ke halaman utama!</p>
+			<a href="../">Go To Homepage</a>
 		</div>
 	</div>
 
 </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
+
 </html>
