--- a/Client/Views/Certificate/Index.cshtml
+++ b/Client/Views/Certificate/Index.cshtml
@@ -21,8 +21,7 @@
     <p id="sessionEmail" hidden>@HttpContextAccessor.HttpContext.Session.GetString("email")</p>
     <script>
         let sesEmail = document.getElementById("sessionEmail").innerHTML;
-        let certEmail = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(ViewBag.certEmail1));
-        console.log(certEmail[0]);
+        let certCode = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(ViewBag.certCode1));
     </script>
 
     <div class="container pm-certificate-container">
@@ -110,9 +109,28 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    <script>
+        function GetCertificateByCode(code) {
+            let data = {};
+            $.ajax({
+                url: "https://localhost:44376/api/certificates/bycode/" + code,
+                async: false,
+            })
+                .done((result) => {
+                    data = result.data;
+                })
+                .fail((error) => {
+                    console.log(error);
+                });
+            return data;
+        }
+        let certData = GetCertificateByCode(certCode);
+        $("#judulSertif").html(certData.class_Name);
+    </script>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
 </body>
